fix: tap hightlight color on mobile devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,7 @@ a {
 
 * {
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 
 #__next {
